[tool.poetry]
name = "ep-trafficstops"
version = "0.1.0"
description = ""
authors = ["Pauline Hidalgo <hidalgopauline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.22.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
pyarrow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
